--- a/library_system/library_system/doctype/library_settings/library_settings.json
+++ b/library_system/library_system/doctype/library_settings/library_settings.json
@@ -17,7 +17,7 @@
  ],
  "index_web_pages_for_search": 1,
  "links": [],
- "modified": "2024-06-12 07:16:20.206284",
+ "modified": "2024-06-12 14:05:21.421018",
  "modified_by": "Administrator",
  "module": "Library System",
  "name": "Library settings",
@@ -33,6 +33,18 @@
    "read": 1,
    "report": 1,
    "role": "System Manager",
+   "share": 1,
+   "write": 1
+  },
+  {
+   "create": 1,
+   "delete": 1,
+   "email": 1,
+   "export": 1,
+   "print": 1,
+   "read": 1,
+   "report": 1,
+   "role": "Guest",
    "share": 1,
    "write": 1
   }
